--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   display: flex;
   flex-direction: column;
 }
-
 header {
   background-color: rgba(0, 0, 0, 0.3);
   height: 100px;
@@ -32,10 +31,19 @@ header nav ul li:hover {
 }
 #extras{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   align-self: center;
   border-radius: 10px;
 }
+.img_extras{
+  height: 100px;
+  width:200px;
+  margin-top: 30px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 4px;
+  padding: 6px;
+}
+
 #prueba{
   display: flex;
   flex-direction: row;
@@ -68,7 +76,148 @@ main {
 
 footer {
   background-color: rgba(0, 0, 0, 0.3);
-  height: 240px;
+  height: 600px;
   font-family: "Nunito", sans-serif;
   margin-top: auto;
+  display: grid; 
+  grid-template-rows: repeat(3, 1fr);
+}
+
+@media (min-width: 768px){
+  header {
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 100px;
+    font-family: "Nunito", sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    width: 100%;
+  }
+  header nav ul li:hover {
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9), 0 0 20px rgb(0, 0, 0);
+    outline-color: rgb(0, 0, 0);
+    border-radius: 90px;
+  }
+  #barra{
+    display: flex;
+    justify-content: center;
+  }
+  #extras{
+    align-self: center;
+    border-radius: 10px;
+  }
+  .img_extras{
+    height: 100px;
+    width:200px;
+    margin-top: 30px;
+
+  }
+  #prueba{
+    display: flex;
+    flex-direction: row;
+  }
+  #vaciar{
+    display: grid;
+    grid-template-columns: 85% 15%;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 30px;
+  }
+  
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    font-family: "Nunito", sans-serif;
+  }
+  
+  .carrito{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  footer {
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 380px;
+    font-family: "Nunito", sans-serif;
+    margin-top: auto;
+  }
+}
+@media (min-width: 1200px){
+  header {
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 100px;
+    font-family: "Nunito", sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    width: 100%;
+  }
+  header nav ul li:hover {
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9), 0 0 20px rgb(0, 0, 0);
+    outline-color: rgb(0, 0, 0);
+    border-radius: 90px;
+  }
+  #barra{
+    display: flex;
+    justify-content: center;
+  }
+  #extras{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-self: center;
+    border-radius: 10px;
+  }
+  .img_extras{
+    height: 100px;
+    width:200px;
+    margin-top: 30px;
+  }
+
+  #prueba{
+    display: flex;
+    flex-direction: row;
+  }
+  #vaciar{
+    display: grid;
+    grid-template-columns: 85% 15%;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 30px;
+  }
+  
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    font-family: "Nunito", sans-serif;
+  }
+  
+  .carrito{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  footer {
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 240px;
+    font-family: "Nunito", sans-serif;
+    margin-top: auto;
+  }
 }
