--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-image: url(../image/Bodega.jpg);
+  background-image: url(../image/bodega.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -21,14 +21,15 @@ header {
   width: 100%;
 }
 header nav ul li:hover {
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9), 0 0 20px rgb(0, 0, 0);
+  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.9), 0 0 40px rgb(0, 0, 0);
   outline-color: rgb(0, 0, 0);
-  border-radius: 90px;
+  border-radius: 20px;
 }
 #barra{
   display: flex;
   justify-content: center;
 }
+
 #extras{
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -36,12 +37,15 @@ header nav ul li:hover {
   border-radius: 10px;
 }
 .img_extras{
-  height: 100px;
-  width:200px;
+  height: 160px;
+  width:300px;
   margin-top: 30px;
-  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 4px;
+  background-color:rgba(0, 0, 0, 0.5);
   padding: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #prueba{
@@ -96,9 +100,9 @@ footer {
     width: 100%;
   }
   header nav ul li:hover {
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9), 0 0 20px rgb(0, 0, 0);
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.9), 0 0 40px rgb(0, 0, 0);
     outline-color: rgb(0, 0, 0);
-    border-radius: 90px;
+    border-radius: 20px;
   }
   #barra{
     display: flex;
@@ -164,24 +168,29 @@ footer {
     width: 100%;
   }
   header nav ul li:hover {
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9), 0 0 20px rgb(0, 0, 0);
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.9), 0 0 40px rgb(0, 0, 0);
     outline-color: rgb(0, 0, 0);
-    border-radius: 90px;
+    border-radius: 20px;
   }
   #barra{
     display: flex;
     justify-content: center;
   }
   #extras{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-direction: row;
     align-self: center;
     border-radius: 10px;
   }
   .img_extras{
-    height: 100px;
-    width:200px;
+    height: 120px;
+    width:300px;
     margin-top: 30px;
+    background-color:rgba(122, 114, 114, 0.5);
+    margin-left: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   #prueba{
@@ -196,6 +205,7 @@ footer {
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 30px;
+    font-weight: bold;
   }
   
   main {
