--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-image: url(../image/bodega.jpg);
+  background-image: url(../image/bodegafinal.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
